fix gamepicker menus z-index with clip-path

--- a/my-app/src/components/landing-page/GamePicker/GamePicker.module.css
+++ b/my-app/src/components/landing-page/GamePicker/GamePicker.module.css
@@ -11,17 +11,27 @@
     display: flex;
     width: 100%;
     height: 100%;
-    background-color: var(--light-blue-gray);
-    clip-path: polygon(0% 0%, 193% 0%, 88% 100%, 0 100%);
+    padding-bottom: 46px;
 }
 .left {
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding-bottom: 46px;
     height: 100%;
+    background-color: var(--light-blue-gray);
+}
+.left::after {
+    content: "";
+    bottom: -46px;
+    width: 100%;
+    height: 46px;
+    position: absolute;
+    background-color: var(--light-blue-gray);
+    clip-path: polygon(0% 0%, 100% 0%, 90% 100%, 0 100%);
 }
 .title_container {
     display: flex;
@@ -77,17 +87,22 @@
         padding-bottom: 64px;
     }
     .content {
-        clip-path: polygon(0% 0%, 147% 0%, 87% 100%, 0 100%);
+        padding-bottom: 0;
     }
     .right {
         width : 38.4%;
         height: 100%;
         padding-top: 116px;
+        background-color: var(--light-blue-gray);
+        clip-path: polygon(0% 0%, 215% 0%, 67% 100%, 0 100%);
     }
     .left {
         width: 61.6%;
         align-items: flex-start;
         padding-bottom: 43px;
+    }
+    .left::after {
+        display: none;
     }
     .title_container {
         justify-content: flex-start;
@@ -128,9 +143,6 @@
         padding-top: 50px;
         padding-bottom: 120px;
     }
-    .content {
-        clip-path: polygon(0% 0%, 150% 0%, 89% 100%, 0 100%);
-    }
     .left {
         width: 59%;
         padding-bottom: 153px;
@@ -138,6 +150,7 @@
     .right {
         width : 41%;
         padding-top: 136px;
+        clip-path: polygon(0% 0%, 231% 0%, 74% 100%, 0 100%);
     }
     .title_container {
         padding-left: 14%;
@@ -170,7 +183,7 @@
         padding-bottom: 192px;
     }
     .right {
-        width : 37.5%;
+        padding-right: 3.5%;
     }
     .title_container {
         width: 108%;
